11th Commit GabrielRamos

--- a/src/intranetBundle/Resources/config/doctrine/Entity.F_Expenses.orm.yml
+++ b/src/intranetBundle/Resources/config/doctrine/Entity.F_Expenses.orm.yml
@@ -26,6 +26,9 @@ intranetBundle\Entity\Entity\F_Expenses:
         status:
             type: integer
             nullable: true
+        isread:
+            type: integer
+            nullable: true
         type:
             type: string
             length: 8
