--- a/src/intranetBundle/Resources/config/doctrine/Entity.F_Hours.orm.yml
+++ b/src/intranetBundle/Resources/config/doctrine/Entity.F_Hours.orm.yml
@@ -20,6 +20,9 @@ intranetBundle\Entity\Entity\F_Hours:
         status:
             type: integer
             nullable: true
+        isread:
+            type: integer
+            nullable: true
         type:
             type: string
             length: 8
