--- a/src/intranetBundle/Resources/config/doctrine/Entity.F_Trip.orm.yml
+++ b/src/intranetBundle/Resources/config/doctrine/Entity.F_Trip.orm.yml
@@ -28,6 +28,9 @@ intranetBundle\Entity\Entity\F_Trip:
         status:
             type: integer
             nullable: true
+        isread:
+            type: integer
+            nullable: true
         type:
             type: string
             length: 8
