--- a/src/intranetBundle/Resources/config/doctrine/Entity.F_Vacation.orm.yml
+++ b/src/intranetBundle/Resources/config/doctrine/Entity.F_Vacation.orm.yml
@@ -18,6 +18,9 @@ intranetBundle\Entity\Entity\F_Vacation:
         status:
             type: integer
             nullable: true
+        isread:
+            type: integer
+            nullable: true
         type:
             type: string
             length: 8
